# dat-engine

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
dat-engine/: CMakeLists.txt  DatEngine.cpp  DatEngine.h  dat-engine.h
dat-engine/asset/: Asset.h  AssetManager.h  AssetRef.h  AssetRef.inl  CMakeLists.txt  GpuAsset.h
dat-engine/assets/: CMakeLists.txt  asset-factory.h  asset-manager.h  asset-ref.h  asset.h  gpu-asset.h
dat-engine/assets/asset-types/: texture-asset.h
dat-engine/assets/source/: asset-manager.cpp  asset-ref.inl
dat-engine/container/: CMakeLists.txt  IdArray.h  SparseMap.h  id-array.h  sparse-map.h
dat-engine/engine/: CMakeLists.txt  Registry.h  sub-system.h  ticking-object.h  world-object-2d.h  world-object.h
dat-engine/engine-assets/: gradient.comp
dat-engine/event-bus/: CMakeLists.txt  Event.h  EventBus.h
dat-engine/gpu/: CMakeLists.txt  IGpu.cpp  IGpu.h  IWindow.cpp  IWindow.h  igpu.h  iwindow.h
dat-engine/gpu/exception/: GpuException.h  GpuInitException.h
dat-engine/gpu/source/: igpu.cpp  iwindow.cpp
dat-engine/gpu/vulkan/: CMakeLists.txt  FrameData.h  VkPipeline.cpp  VkPipeline.h  VkShortcuts.cpp  VkShortcuts.h  VkStub.cpp  VkStub.h  VkTypes.cpp  VkTypes.h  VulkanGpu.cpp  VulkanGpu.h  frame-data.h  vk-pipeline.h  vk-shortcuts.h  vk-types.h  vulkan-gpu.h
dat-engine/gpu/vulkan/source/: vk-pipeline.cpp  vk-shortcuts.cpp  vk-types.cpp  vulkan-gpu.cpp
dat-engine/maths/: CMakeLists.txt  CommonMaths.cpp  CommonMaths.h  Constants.h  Matrix.h  Quaternion.h  Vector.h  common-maths.h  matrix.h  numbers.h  quaternion.h  vector.h
dat-engine/maths/matrix/: Mat.h  mat-common.inl  mat-forward.h  mat-platform.h  mat.h  mat4.h
dat-engine/maths/quaternion/: Quat.h  quat.h
dat-engine/maths/source/: common-maths.cpp
dat-engine/maths/vector/: Vec1.h  Vec1.inl  Vec2.h  Vec2.inl  Vec3.h  Vec3.inl  Vec4.h  Vec4.inl  VecForward.h  VecN.h  VectorString.h  vec-forward.h  vec1.h  vec2.h  vec3.h  vec4.h  vecn.h  vector-string.h
dat-engine/maths/vector/source/: vec1.inl  vec2.inl  vec3.inl  vec4.inl
dat-engine/platform/: CMakeLists.txt
dat-engine/platform/x86/: intrinsics-helper.h
dat-engine/platform/x86/maths/: mat-platform.cpp
dat-engine/rendering/: CMakeLists.txt  IRenderer.h  IWindow.h  irenderer.h  iwindow.h
dat-engine/rendering/source/: IRenderer.cpp  IWindow.cpp  igpu.cpp  irenderer.cpp  iwindow.cpp
dat-engine/rendering/vulkan/: CMakeLists.txt  frame-data.h  vk-helper.h  vk-window.h  vulkan-gpu.h  vulkan-renderer.h
dat-engine/rendering/vulkan/source/: vulkan-gpu.cpp  vulkan-renderer.cpp
dat-engine/scene/: scene.h
dat-engine/service/: EngineService.h
dat-engine/source/: dat-engine.cpp
dat-engine/threading/: ThreadManager.h
dat-engine/util/: CMakeLists.txt  CVar.cpp  CVar.h  EngineConstants.h.in  Localisation.cpp  Localisation.h  Logger.cpp  Logger.h  Macros.h  StringUtils.h  TypeTraits.h  cvar.h  empty-init.h  engine-constants.h.in  logger.h  macros.h  string-utils.h  type-traits.h
dat-engine/util/Exception/: DatException.h
dat-engine/util/source/: cvar.cpp  logger.cpp
examples/: CMakeLists.txt
examples/test-project/: CMakeLists.txt  main.cpp
file-standards/: dat-mesh.md
first-party/: CMakeLists.txt
first-party/asset-io/: CMakeLists.txt
first-party/asset-io/include/: AssetIoResult.h
first-party/asset-io/include/dat-mesh/: Meta.h  Reader.h  Writer.h  meta.h  reader.h  writer.h
first-party/asset-io/source/dat-mesh/: Meta.cpp  Reader.cpp  Writer.cpp  reader.cpp  writer.cpp
first-party/asset-processing/: CMakeLists.txt
first-party/asset-processing/include/: AssetProcessException.h  ShaderProcessor.h  base-asset-processor.h  copy-processor.h  shader-processor.h
first-party/asset-processing/source/: BaseAssetProcessor.cpp  ShaderProcessor.cpp  asset-processor-application.cpp  base-asset-processor.cpp  copy-processor.cpp  shader-processor.cpp
first-party/asset-processing/source/application/: AssetProcessorApplication.cpp  asset-processor-application.cpp
game/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  MatrixTests.cpp  SparseMapTests.cpp  VectorTests.cpp  matrix-tests.cpp  sparse-map-tests.cpp  unit-test.cpp  vector-tests.cpp
